--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
