--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "arraylist": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "firebase": "^9.9.3",
+    "firebase": "^8.6.8",
     "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.23.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
