--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase-functions": "^3.23.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "random-token": "^0.0.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12"
